--- a/index.html
+++ b/index.html
@@ -5,9 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miami</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="icon" href="images/favicon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Miami</h1>
+    <header class="header">
+      <div class="header__top">
+        <div class="header__phone-button"><a href="#"></a></div>
+        <div class="header__phone">+1 234 555-55-55</div>
+        <div class="logo header__logo"></div>
+        <div class="header__action"><a href="#" class="header__link">call to order</a></div>
+        <label for="toggler" class="header__toggler">
+
+        </label>
+      </div>
+
+      <div class="header__title">
+        Miami<br>
+        Condo Kings
+      </div>
+      <input id="toggler" class="nav__visible" type="checkbox">
+      <nav id="nav" class="nav header__nav">
+
+        <label class="nav__toggler" for="toggler"></label>
+
+
+
+        <ul class="nav__list">
+          <li class="nav__item nav__item--active"><a class="nav__link" href="#">Home</a></li>
+          <li class="nav__item"><a class="nav__link" href="#">About Us</a></li>
+          <li class="nav__item"><a class="nav__link" href="#">gallery</a></li>
+          <li class="nav__item"><a class="nav__link" href="#">consultation</a></li>
+          <li class="nav__item"><a class="nav__link" href="#">testimonials</a></li>
+          <li class="nav__item"><a class="nav__link" href="#">Contacts</a></li>
+          <li class="nav__menu"><p class="nav__phone">+1 234 555-55-55</p></li>
+          <li class="nav__menu"><a class="nav__link nav__link--call" href="#">call to order</a></li>
+        </ul>
+      </nav>
+
+
+
+    </header>
+
+
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
