--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <div class="header__phone-button"><a href="#"></a></div>
         <div class="header__phone">+1 234 555-55-55</div>
         <div class="logo header__logo"></div>
-        <div class="header__action"><a href="#" class="header__link">call to order</a></div>
+        <div class="header__action">
+          <a href="#" class="header__link">
+            call to order
+          </a>
+        </div>
         <label for="toggler" class="header__toggler">
 
         </label>
@@ -42,10 +46,204 @@
           <li class="nav__menu"><a class="nav__link nav__link--call" href="#">call to order</a></li>
         </ul>
       </nav>
-
-
-
     </header>
+
+    <main class="main">
+      <section class="title-block">
+        <h1 class="title-block__title1">
+          Miami&nbsp;best<br>Real&nbsp;estate&nbsp;<span class="title-block__here">here</span>
+        </h1>
+        <article class="title-block__article">
+          <h2 class="title-block__title2">
+            Over 50 years experience in love.
+          </h2>
+          <p>
+            Mazel and VA Tsukkerman in his "Analysis of musical
+             works." Pointillism, which originated in the music
+             of the early twentieth century, microforms, found a distant
+             historical.
+          </p>
+          <p>
+            The market leader in real estate since 2003. Awards Real Estate
+             Company, 2010, 2011, 2013. More than 200 satisfied customers
+             premium segment. We focus only on new buildings and high-level
+              doskanalno know this area better than other specialists.<br>
+              Working directly with developers - so have more useful
+              information about the profitable deals.
+          </p>
+          <p>
+            <strong>We will never be late!<br> secure transaction - 100%</strong>
+          </p>
+        </article>
+
+
+      </section>
+
+      <section class="gallery">
+        <h1 class="gallery__title">
+          Gallery
+        </h1>
+        <div class="gallery__subblock">
+          <div class="gallery__container">
+          <p class="gallery__photo--big gallery__photo"
+           id="gal-photo1">
+          </p>
+          <p class="gallery__photo--small gallery__photo"
+           id="gal-photo2">
+        </p>
+          </div>
+          <p class="gallery__caption">
+            <span class="gallery__color-text">
+              Marina Palms
+            </span>
+             / North Miami Beach, FL 33162
+            </p>
+        </div>
+
+        <div class="gallery__subblock">
+          <div class="gallery__container">
+          <p class="gallery__photo" id="gal-photo3">
+          </p>
+          <p class="gallery__photo" id="gal-photo4">
+        </p>
+          </div>
+          <p class="gallery__caption">
+            <span class="gallery__color-text">
+              Edition Residens
+            </span>
+            / Miami Beach, FL 33139
+            </p>
+        </div>
+
+        <div class="gallery__subblock">
+          <div class="gallery__container">
+          <p class="gallery__photo--small gallery__photo" id="gal-photo5">
+          </p>
+          <p class="gallery__photo--big gallery__photo" id="gal-photo6">
+        </p>
+          </div>
+          <p class="gallery__caption">
+            <span class="gallery__color-text">
+              Faena House
+            </span>
+            / Miami Beach, FL 33140
+            </p>
+        </div>
+
+        <button class="button gallery__button">
+          View all
+        </button>
+
+
+      </section>
+
+      <section class="consultation">
+        <h1 class="consultation__title1">Consultation</h1>
+        <div class="consultation__container">
+          <article class="consultation__article">
+            <h2 class="consultation__title2 ">
+              How long have you do<br> yourself a gift?
+            </h2>
+            <p>The procedural change mezzo forte starts izoritmichesky
+               pickup at these moments stop LA Mazel and VA Tsukkerman
+                in his "Analysis of musical works." Pointillism, which
+                originated in the music of the early twentieth century,
+                microforms, found a distant historical.
+            </p>
+          </article>
+          <form class="form consultation__form" action="post">
+            <input class="form__name" placeholder="Name" type="text">
+            <input class="form__phone" placeholder="Phone" type="phone">
+            <input class="form__email" placeholder="Email" type="email">
+            <input class="button form__button" type="submit" value="Consultation">
+          </form>
+        </div>
+
+      </section>
+
+
+      <section class="testimonials">
+        <h1 class="testimonials__title1">Testimonials</h1>
+        <div class="testimonials__container">
+        <article class="testimonials__block">
+          <p class="testimonials__photo" id="testimonials-photo1">
+          </p>
+          <p class="testimonials__title2">Leslie Mckinney</p>
+          <p class="testimonials__subtitle">CEO</p>
+          <p class="testimonials__text">
+            Nice work, Certificates National Association of Realtors
+             (USA)
+            </p>
+        </article>
+        <article class="testimonials__block">
+          <p class="testimonials__photo" id="testimonials-photo2">
+        </p>
+          <p class="testimonials__title2">Scarlett Hawkins</p>
+          <p class="testimonials__subtitle">Senior Vice President</p>
+          <p class="testimonials__text">My soul is illuminated by
+             an unearthly joy, as these beautiful spring morning,
+             which I enjoy with all my heart
+            </p>
+        </article>
+        <article class="testimonials__block">
+          <p class="testimonials__photo" id="testimonials-photo3">
+        </p>
+          <p class="testimonials__title2">Max Henry</p>
+          <p class="testimonials__subtitle">Chief Design Officer</p>
+          <p class="testimonials__text">When my lovely valley of
+            steam rises and half-day sun is above an impermeable
+          </p>
+        </article>
+
+        </div>
+
+
+      </section>
+
+
+      <section class="contact">
+        <h1 class="contact__title1">Contact us</h1>
+        <div class="contact__container">
+          <div class="contact__subcontainer">
+          <article>
+          <p class="contact__subtitle">Phone</p>
+          <p>+1 234 5555-55-55</p>
+          <p class="contact__subtitle">Email</p>
+          <p>hello@miami.com</p>
+          </article>
+          <article>
+            <p class="contact__subtitle">Address</p>
+          <p>400 first ave. n.<br>suite 700<br>Minneapolis, MN 55401</p>
+          </article>
+          </div>
+
+          <form class="form contact__form" action="post">
+            <input class="form__name" placeholder="Name" type="text">
+            <input class="form__email" placeholder="Email" type="email">
+            <input class="form__message" placeholder="Message" type="textarea">
+            <input class="button form__button" type="submit" value="Consultation">
+          </form>
+        </div>
+
+      </section>
+
+    </main>
+
+
+
+
+
+
+
+
+
+
+    <footer class="footer">
+      <div class="logo footer__logo">
+
+      </div>
+
+    </footer>
 
 
 
