--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
         <ul class="nav__list">
           <li class="nav__item nav__item--active"><a class="nav__link" href="#">Home</a></li>
-          <li class="nav__item"><a class="nav__link" href="#">About Us</a></li>
-          <li class="nav__item"><a class="nav__link" href="#">gallery</a></li>
-          <li class="nav__item"><a class="nav__link" href="#">consultation</a></li>
-          <li class="nav__item"><a class="nav__link" href="#">testimonials</a></li>
-          <li class="nav__item"><a class="nav__link" href="#">Contacts</a></li>
+          <li class="nav__item"><a class="nav__link" href="#title-block">About Us</a></li>
+          <li class="nav__item"><a class="nav__link" href="#gallery">gallery</a></li>
+          <li class="nav__item"><a class="nav__link" href="#consultation">consultation</a></li>
+          <li class="nav__item"><a class="nav__link" href="#testimonials">testimonials</a></li>
+          <li class="nav__item"><a class="nav__link" href="#contact">Contacts</a></li>
           <li class="nav__menu"><p class="nav__phone">+1 234 555-55-55</p></li>
           <li class="nav__menu"><a class="nav__link nav__link--call" href="#">call to order</a></li>
         </ul>
@@ -49,7 +49,7 @@
     </header>
 
     <main class="main">
-      <section class="title-block">
+      <section class="title-block" id="title-block">
         <h1 class="title-block__title1">
           Miami&nbsp;best<br>Real&nbsp;estate&nbsp;<span class="title-block__here">here</span>
         </h1>
@@ -79,7 +79,7 @@
 
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <h1 class="gallery__title">
           Gallery
         </h1>
@@ -137,7 +137,7 @@
 
       </section>
 
-      <section class="consultation">
+      <section class="consultation" id="consultation">
         <h1 class="consultation__title1">Consultation</h1>
         <div class="consultation__container">
           <article class="consultation__article">
@@ -162,7 +162,7 @@
       </section>
 
 
-      <section class="testimonials">
+      <section class="testimonials" id="testimonials">
         <h1 class="testimonials__title1">Testimonials</h1>
         <div class="testimonials__container">
         <article class="testimonials__block">
@@ -201,7 +201,7 @@
       </section>
 
 
-      <section class="contact">
+      <section class="contact" id="contact">
         <h1 class="contact__title1">Contact us</h1>
         <div class="contact__container">
           <div class="contact__subcontainer">
