--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <header class="header">
       <div class="header__top">
-        <div class="header__phone-button"><a href="#"></a></div>
-        <div class="header__phone">+1 234 555-55-55</div>
+        <div class="header__phone-button"><a  href="tel:1 234 555-55-55"></a></div>
+        <a href="tel:1 234 555-55-55" class="header__phone">+1 234 555-55-55</a>
         <div class="logo header__logo"></div>
         <div class="header__action">
           <a href="#" class="header__link">
@@ -43,7 +43,7 @@
           <li class="nav__item"><a class="nav__link" href="#testimonials">testimonials</a></li>
           <li class="nav__item"><a class="nav__link" href="#contact">Contacts</a></li>
           <li class="nav__menu"><p class="nav__phone">+1 234 555-55-55</p></li>
-          <li class="nav__menu"><a class="nav__link nav__link--call" href="#">call to order</a></li>
+          <li class="nav__menu"><a class="nav__link nav__link--call" href="tel:1 234 555-55-55">call to order</a></li>
         </ul>
       </nav>
     </header>
@@ -151,10 +151,10 @@
                 microforms, found a distant historical.
             </p>
           </article>
-          <form class="form consultation__form" action="post">
-            <input class="form__name" placeholder="Name" type="text">
-            <input class="form__phone" placeholder="Phone" type="phone">
-            <input class="form__email" placeholder="Email" type="email">
+          <form class="form consultation__form" method="post" action="mailto:hello@miami.com">
+            <input class="form__name" placeholder="Name" type="text" maxlength="30" required>
+            <input class="form__phone" placeholder="Phone" pattern="+[0-9]{1} [0-9]{3} [0-9]{4}-[0-9]{2}-[0-9]{2}" type="phone" required>
+            <input class="form__email" placeholder="Email" type="email" pattern="^[a-zA-Z]+$@^[a-zA-Z]+$.^[a-zA-Z]+$" required>
             <input class="button form__button" type="submit" value="Consultation">
           </form>
         </div>
@@ -209,7 +209,7 @@
           <p class="contact__subtitle">Phone</p>
           <p>+1 234 5555-55-55</p>
           <p class="contact__subtitle">Email</p>
-          <p>hello@miami.com</p>
+          <a class="contact__email" href="mailto:hello@miami.com">hello@miami.com</a>
           </article>
           <article>
             <p class="contact__subtitle">Address</p>
@@ -217,10 +217,10 @@
           </article>
           </div>
 
-          <form class="form contact__form" action="post">
-            <input class="form__name" placeholder="Name" type="text">
-            <input class="form__email" placeholder="Email" type="email">
-            <input class="form__message" placeholder="Message" type="textarea">
+          <form class="form contact__form" method="post" action="mailto:hello@miami.com">
+            <input class="form__name" placeholder="Name" type="text" maxlength="30" required>
+            <input class="form__email" placeholder="Email" type="email" required>
+            <input class="form__message" placeholder="Message" maxlength="500" type="textarea" required>
             <input class="button form__button" type="submit" value="Consultation">
           </form>
         </div>
