--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 
     <main class="main">
       <section class="title-block" id="title-block">
-        <h1 class="title-block__title1">
+        <h1 class="title-block__title-big">
           Miami&nbsp;best<br>Real&nbsp;estate&nbsp;<span class="title-block__here">here</span>
         </h1>
         <article class="title-block__article">
-          <h2 class="title-block__title2">
+          <h2 class="title-block__title-small">
             Over 50 years experience in love.
           </h2>
           <p>
@@ -138,10 +138,10 @@
       </section>
 
       <section class="consultation" id="consultation">
-        <h1 class="consultation__title1">Consultation</h1>
+        <h1 class="consultation__title-big">Consultation</h1>
         <div class="consultation__container">
           <article class="consultation__article">
-            <h2 class="consultation__title2 ">
+            <h2 class="consultation__title-small ">
               How long have you do<br> yourself a gift?
             </h2>
             <p>The procedural change mezzo forte starts izoritmichesky
@@ -202,7 +202,7 @@
 
 
       <section class="contact" id="contact">
-        <h1 class="contact__title1">Contact us</h1>
+        <h1 class="contact__title">Contact us</h1>
         <div class="contact__container">
           <div class="contact__subcontainer">
           <article>
