--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         </h1>
         <div class="gallery__subblock">
           <div class="gallery__container">
-          <p class="gallery__photo--big gallery__photo"
+          <p class="gallery__photo--big gallery__photo gallery__photo--left"
            id="gal-photo1">
           </p>
-          <p class="gallery__photo--small gallery__photo"
+          <p class="gallery__photo--small gallery__photo gallery__photo--right"
            id="gal-photo2">
         </p>
           </div>
@@ -102,9 +102,9 @@
 
         <div class="gallery__subblock">
           <div class="gallery__container">
-          <p class="gallery__photo" id="gal-photo3">
+          <p class="gallery__photo gallery__photo--left" id="gal-photo3">
           </p>
-          <p class="gallery__photo" id="gal-photo4">
+          <p class="gallery__photo gallery__photo--right" id="gal-photo4">
         </p>
           </div>
           <p class="gallery__caption">
@@ -117,9 +117,9 @@
 
         <div class="gallery__subblock">
           <div class="gallery__container">
-          <p class="gallery__photo--small gallery__photo" id="gal-photo5">
+          <p class="gallery__photo--small gallery__photo gallery__photo--left" id="gal-photo5">
           </p>
-          <p class="gallery__photo--big gallery__photo" id="gal-photo6">
+          <p class="gallery__photo--big gallery__photo gallery__photo--right" id="gal-photo6">
         </p>
           </div>
           <p class="gallery__caption">
