--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="tel:1 234 555-55-55" class="header__phone">+1 234 555-55-55</a>
         <div class="logo header__logo"></div>
         <div class="header__action">
-          <a href="#" class="header__link">
+          <a href="tel:1 234 555-55-55" class="header__link">
             call to order
           </a>
         </div>
