--- a/index.html
+++ b/index.html
@@ -1,170 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miami</title>
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="icon" href="images/favicon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <header class="header">
-      <div class="header__top">
-        <div class="header__phone-button"><a  href="tel:1 234 555-55-55"></a></div>
-        <a href="tel:1 234 555-55-55" class="header__phone">+1 234 555-55-55</a>
-        <div class="logo header__logo"></div>
-        <div class="header__action">
-          <a href="tel:1 234 555-55-55" class="header__link">
-            call to order
-          </a>
-        </div>
-        <label for="toggler" class="header__toggler">
 
-        </label>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Miami</title>
+  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="icon" href="images/favicon.png">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <header class="header">
+    <div class="header__top">
+      <div class="header__phone-button"><a href="tel:1 234 555-55-55"></a></div>
+      <a href="tel:1 234 555-55-55" class="header__phone">+1 234 555-55-55</a>
+      <div class="logo header__logo"></div>
+      <div class="header__action">
+        <a href="tel:1 234 555-55-55" class="header__link">
+          call to order
+        </a>
       </div>
+      <label for="toggler" class="header__toggler">
 
-      <div class="header__title">
-        Miami<br>
-        Condo Kings
-      </div>
-      <input id="toggler" class="nav__visible" type="checkbox">
-      <nav id="nav" class="nav header__nav">
+      </label>
+    </div>
 
-        <label class="nav__toggler" for="toggler"></label>
+    <div class="header__title">
+      Miami<br>
+      Condo Kings
+    </div>
+    <input id="toggler" class="nav__visible" type="checkbox">
+    <nav id="nav" class="nav header__nav">
 
-
-
-        <ul class="nav__list">
-          <li class="nav__item nav__item--active"><a class="nav__link" href="#">Home</a></li>
-          <li class="nav__item"><a class="nav__link" href="#title-block">About Us</a></li>
-          <li class="nav__item"><a class="nav__link" href="#gallery">gallery</a></li>
-          <li class="nav__item"><a class="nav__link" href="#consultation">consultation</a></li>
-          <li class="nav__item"><a class="nav__link" href="#testimonials">testimonials</a></li>
-          <li class="nav__item"><a class="nav__link" href="#contact">Contacts</a></li>
-          <li class="nav__menu"><p class="nav__phone">+1 234 555-55-55</p></li>
-          <li class="nav__menu"><a class="nav__link nav__link--call" href="tel:1 234 555-55-55">call to order</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <main class="main">
-      <section class="title-block" id="title-block">
-        <h1 class="title-block__title-big">
-          Miami&nbsp;best<br>Real&nbsp;estate&nbsp;<span class="title-block__here">here</span>
-        </h1>
-        <article class="title-block__article">
-          <h2 class="title-block__title-small">
-            Over 50 years experience in love.
-          </h2>
-          <p>
-            Mazel and VA Tsukkerman in his "Analysis of musical
-             works." Pointillism, which originated in the music
-             of the early twentieth century, microforms, found a distant
-             historical.
-          </p>
-          <p>
-            The market leader in real estate since 2003. Awards Real Estate
-             Company, 2010, 2011, 2013. More than 200 satisfied customers
-             premium segment. We focus only on new buildings and high-level
-              doskanalno know this area better than other specialists.<br>
-              Working directly with developers - so have more useful
-              information about the profitable deals.
-          </p>
-          <p>
-            <strong>We will never be late!<br> secure transaction - 100%</strong>
-          </p>
-        </article>
+      <label class="nav__toggler" for="toggler"></label>
 
 
-      </section>
 
-      <section class="gallery" id="gallery">
-        <h1 class="gallery__title">
-          Gallery
-        </h1>
-        <div class="gallery__subblock">
-          <div class="gallery__container">
-          <p class="gallery__photo--big gallery__photo gallery__photo--left"
-           id="gal-photo1">
-          </p>
-          <p class="gallery__photo--small gallery__photo gallery__photo--right"
-           id="gal-photo2">
+      <ul class="nav__list">
+        <li class="nav__item nav__item--active"><a class="nav__link" href="#">Home</a></li>
+        <li class="nav__item"><a class="nav__link" href="#title-block">About Us</a></li>
+        <li class="nav__item"><a class="nav__link" href="#gallery">gallery</a></li>
+        <li class="nav__item"><a class="nav__link" href="#consultation">consultation</a></li>
+        <li class="nav__item"><a class="nav__link" href="#testimonials">testimonials</a></li>
+        <li class="nav__item"><a class="nav__link" href="#contact">Contacts</a></li>
+        <li class="nav__menu">
+          <p class="nav__phone">+1 234 555-55-55</p>
+        </li>
+        <li class="nav__menu"><a class="nav__link nav__link--call" href="tel:1 234 555-55-55">call to order</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="main">
+    <section class="title-block" id="title-block">
+      <h1 class="title-block__title-big">
+        Miami&nbsp;best<br>Real&nbsp;estate&nbsp;
+        <a href="http://maps.google.com/?q=400 first ave. n. suite 700 Minneapolis, MN 55401" class="title-block__here">
+          here
+        </a>
+      </h1>
+      <article class="title-block__article">
+        <h2 class="title-block__title-small">
+          Over 50 years experience in love.
+        </h2>
+        <p>
+          Mazel and VA Tsukkerman in his "Analysis of musical
+          works." Pointillism, which originated in the music
+          of the early twentieth century, microforms, found a distant
+          historical.
         </p>
-          </div>
-          <p class="gallery__caption">
-            <span class="gallery__color-text">
-              Marina Palms
-            </span>
-             / North Miami Beach, FL 33162
-            </p>
-        </div>
+        <p>
+          The market leader in real estate since 2003. Awards Real Estate
+          Company, 2010, 2011, 2013. More than 200 satisfied customers
+          premium segment. We focus only on new buildings and high-level
+          doskanalno know this area better than other specialists.<br>
+          Working directly with developers - so have more useful
+          information about the profitable deals.
+        </p>
+        <p>
+          <strong>We will never be late!<br> secure transaction - 100%</strong>
+        </p>
+      </article>
 
-        <div class="gallery__subblock">
-          <div class="gallery__container">
+
+    </section>
+
+    <section class="gallery" id="gallery">
+      <h1 class="gallery__title">
+        Gallery
+      </h1>
+      <div class="gallery__subblock">
+        <div class="gallery__container">
+          <p class="gallery__photo--big gallery__photo gallery__photo--left" id="gal-photo1">
+          </p>
+          <p class="gallery__photo--small gallery__photo gallery__photo--right" id="gal-photo2">
+          </p>
+        </div>
+        <p class="gallery__caption">
+          <a class="gallery__color-text" href="http://maps.google.com/?q=North Miami Beach, FL 33162">
+            Marina Palms
+          </a>
+          <a href="http://maps.google.com/?q=North Miami Beach, FL 33162" class="gallery__black-text">
+            / North Miami Beach, FL 33162
+          </a>
+
+        </p>
+      </div>
+
+      <div class="gallery__subblock">
+        <div class="gallery__container">
           <p class="gallery__photo gallery__photo--left" id="gal-photo3">
           </p>
           <p class="gallery__photo gallery__photo--right" id="gal-photo4">
-        </p>
-          </div>
-          <p class="gallery__caption">
-            <span class="gallery__color-text">
-              Edition Residens
-            </span>
-            / Miami Beach, FL 33139
-            </p>
+          </p>
         </div>
+        <p class="gallery__caption">
+          <a class="gallery__color-text" href="http://maps.google.com/?q=Miami Beach, FL 33139">
+            Edition Residens
+          </a>
+          <a href="http://maps.google.com/?q=Miami Beach, FL 33139" class="gallery__black-text">
+          / Miami Beach, FL 33139
+          </a>
+        </p>
+      </div>
 
-        <div class="gallery__subblock">
-          <div class="gallery__container">
+      <div class="gallery__subblock">
+        <div class="gallery__container">
           <p class="gallery__photo--small gallery__photo gallery__photo--left" id="gal-photo5">
           </p>
           <p class="gallery__photo--big gallery__photo gallery__photo--right" id="gal-photo6">
+          </p>
+        </div>
+        <p class="gallery__caption">
+          <a class="gallery__color-text" href="http://maps.google.com/?q=Miami Beach, FL 33140">
+            Faena House
+          </a>
+          <a href="http://maps.google.com/?q=Miami Beach, FL 33140" class="gallery__black-text">
+          / Miami Beach, FL 33140
+          </a>
+
         </p>
-          </div>
-          <p class="gallery__caption">
-            <span class="gallery__color-text">
-              Faena House
-            </span>
-            / Miami Beach, FL 33140
-            </p>
-        </div>
+      </div>
 
-        <button class="button gallery__button">
-          View all
-        </button>
+      <button class="button gallery__button">
+        View all
+      </button>
 
 
-      </section>
+    </section>
 
-      <section class="consultation" id="consultation">
-        <h1 class="consultation__title-big">Consultation</h1>
-        <div class="consultation__container">
-          <article class="consultation__article">
-            <h2 class="consultation__title-small ">
-              How long have you do<br> yourself a gift?
-            </h2>
-            <p>The procedural change mezzo forte starts izoritmichesky
-               pickup at these moments stop LA Mazel and VA Tsukkerman
-                in his "Analysis of musical works." Pointillism, which
-                originated in the music of the early twentieth century,
-                microforms, found a distant historical.
-            </p>
-          </article>
-          <form class="form consultation__form" method="post" action="mailto:hello@miami.com">
-            <input class="form__name" placeholder="Name" type="text" maxlength="30" required>
-            <input class="form__phone" placeholder="Phone" pattern="+[0-9]{1} [0-9]{3} [0-9]{4}-[0-9]{2}-[0-9]{2}" type="phone" required>
-            <input class="form__email" placeholder="Email" type="email" pattern="^[a-zA-Z]+$@^[a-zA-Z]+$.^[a-zA-Z]+$" required>
-            <input class="button form__button" type="submit" value="Consultation">
-          </form>
-        </div>
+    <section class="consultation" id="consultation">
+      <h1 class="consultation__title-big">Consultation</h1>
+      <div class="consultation__container">
+        <article class="consultation__article">
+          <h2 class="consultation__title-small ">
+            How long have you do<br> yourself a gift?
+          </h2>
+          <p>The procedural change mezzo forte starts izoritmichesky
+            pickup at these moments stop LA Mazel and VA Tsukkerman
+            in his "Analysis of musical works." Pointillism, which
+            originated in the music of the early twentieth century,
+            microforms, found a distant historical.
+          </p>
+        </article>
+        <form class="form consultation__form" method="" action="">
+          <input class="form__name" placeholder="Name" type="text" maxlength="30" required>
+          <input class="form__phone" placeholder="Phone" pattern="+[0-9]{1} [0-9]{3} [0-9]{4}-[0-9]{2}-[0-9]{2}"
+            type="phone" required>
+          <input class="form__email" placeholder="Email" type="email" required>
+          <input class="button form__button" type="submit" value="Consultation">
+        </form>
+      </div>
 
-      </section>
+    </section>
 
 
-      <section class="testimonials" id="testimonials">
-        <h1 class="testimonials__title1">Testimonials</h1>
-        <div class="testimonials__container">
+    <section class="testimonials" id="testimonials">
+      <h1 class="testimonials__title1">Testimonials</h1>
+      <div class="testimonials__container">
         <article class="testimonials__block">
           <p class="testimonials__photo" id="testimonials-photo1">
           </p>
@@ -172,22 +186,22 @@
           <p class="testimonials__subtitle">CEO</p>
           <p class="testimonials__text">
             Nice work, Certificates National Association of Realtors
-             (USA)
-            </p>
+            (USA)
+          </p>
         </article>
         <article class="testimonials__block">
           <p class="testimonials__photo" id="testimonials-photo2">
-        </p>
+          </p>
           <p class="testimonials__title2">Scarlett Hawkins</p>
           <p class="testimonials__subtitle">Senior Vice President</p>
           <p class="testimonials__text">My soul is illuminated by
-             an unearthly joy, as these beautiful spring morning,
-             which I enjoy with all my heart
-            </p>
+            an unearthly joy, as these beautiful spring morning,
+            which I enjoy with all my heart
+          </p>
         </article>
         <article class="testimonials__block">
           <p class="testimonials__photo" id="testimonials-photo3">
-        </p>
+          </p>
           <p class="testimonials__title2">Max Henry</p>
           <p class="testimonials__subtitle">Chief Design Officer</p>
           <p class="testimonials__text">When my lovely valley of
@@ -195,59 +209,48 @@
           </p>
         </article>
 
-        </div>
+      </div>
 
 
-      </section>
+    </section>
 
 
-      <section class="contact" id="contact">
-        <h1 class="contact__title">Contact us</h1>
-        <div class="contact__container">
-          <div class="contact__subcontainer">
+    <section class="contact" id="contact">
+      <h1 class="contact__title">Contact us</h1>
+      <div class="contact__container">
+        <div class="contact__subcontainer">
           <article>
-          <p class="contact__subtitle">Phone</p>
-          <p>+1 234 5555-55-55</p>
-          <p class="contact__subtitle">Email</p>
-          <a class="contact__email" href="mailto:hello@miami.com">hello@miami.com</a>
+            <p class="contact__subtitle">Phone</p>
+            <p>+1 234 5555-55-55</p>
+            <p class="contact__subtitle">Email</p>
+            <a class="contact__email" href="mailto:hello@miami.com">hello@miami.com</a>
           </article>
           <article>
             <p class="contact__subtitle">Address</p>
-          <p>400 first ave. n.<br>suite 700<br>Minneapolis, MN 55401</p>
+            <p>400 first ave. n.<br>suite 700<br>Minneapolis, MN 55401</p>
           </article>
-          </div>
-
-          <form class="form contact__form" method="post" action="mailto:hello@miami.com">
-            <input class="form__name" placeholder="Name" type="text" maxlength="30" required>
-            <input class="form__email" placeholder="Email" type="email" required>
-            <input class="form__message" placeholder="Message" maxlength="500" type="textarea" required>
-            <input class="button form__button" type="submit" value="Consultation">
-          </form>
         </div>
 
-      </section>
-
-    </main>
-
-
-
-
-
-
-
-
-
-
-    <footer class="footer">
-      <div class="logo footer__logo">
-
+        <form class="form contact__form" method="" action="">
+          <input class="form__name" placeholder="Name" type="text" maxlength="30" required>
+          <input class="form__email" placeholder="Email" type="email" required>
+          <input class="form__message" placeholder="Message" maxlength="500" type="textarea" required>
+          <input class="button form__button" type="submit" value="Consultation">
+        </form>
       </div>
 
-    </footer>
+    </section>
 
+  </main>
 
+  <footer class="footer">
+    <div class="logo footer__logo">
 
+    </div>
 
-    <script type="text/javascript" src="scripts/main.js"></script>
-  </body>
+  </footer>
+
+  <script type="text/javascript" src="scripts/main.js"></script>
+</body>
+
 </html>
